--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="action_settings">Settings</string>
     <string name="capture_button">Capture Image From Camera</string>
     <string name="desc">capture image place holder</string>
+    <string name="none">none</string>
 </resources>
